# lace-lang

./: Cargo.toml  README.md  main.lc
compiler/: Cargo.toml
compiler/src/: codegen.rs  error.rs  lib.rs  main.rs  parser.rs  pipeline.rs  scanner.rs  typecheck.rs
hlvm/: Cargo.toml
hlvm/src/: dev.rs  hir.rs  lib.rs  lir.rs  module.rs  traits.rs  vm.rs
lace/: Cargo.toml  README.md
lace/src/: macros.rs  main.rs  vm.rs
lacec/: Cargo.toml  README.md
lacec/src/: bytecode.rs  common.rs  lib.rs  main.rs  parser.rs  scanner.rs
lacec/src/lace/: lacec.rs  mod.rs
shoelace/: Cargo.toml
shoelace/src/: main.rs
src/: compiler.rs  error.rs  io.rs  lexer.rs  main.rs  opcode.rs  parser.rs
src/vm/: arithmetic.rs  common.rs  macro.rs  mod.rs  opcode.rs  operation.rs
src/vm/value/: conversion.rs  exception.rs  mod.rs  operation.rs
