[package]
name = "lace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lacec = {path = "../lacec/"}
rustc-hash = "1.1.0"
bincode = "1.3.3"
serde = { version = "1.0.33", features = ["derive"] }
colored = "2.0.0"
